Smaller titles in contacts

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -126,8 +126,7 @@ p {
   background-color: var(--primary-color);
   color: var(--secondary-color);
 }
-.contact h3,
-.contactDetails h3 {
+.contact h3 {
   color: var(--details-color);
   font-weight: bold;
   font-size: 24px;
@@ -146,6 +145,13 @@ p {
   background-color: var(--primary-color);
   color: var(--secondary-color);
   text-align: center;
+}
+.contactDetails h3 {
+  color: var(--details-color);
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
 }
 @media (max-width: 575px) {
   h1 {
